# lxml

./: .appveyor.yml  .coveragerc  .gitignore  .hgignore  .hgtags  .travis.yml  CHANGES.txt  COMPATIBILITY.txt  CREDITS.txt  DD.py  IDEAS.txt  INSTALL.txt  LICENSE  LICENSES.txt  MANIFEST.in  Makefile  Pyrex-0.9.4.1-public-api.patch  README.rst  README.txt  SECURITY.md  TODO.txt  appveyor.yml  bench.py  bisect_crashes.py  buildlibxml.py  cython-with-GIL-simple.patch  download_artefacts.py  libxslt-1.1.43-backport1.patch  lxmldistutils.py  patch_lxml_deplibs.py  pyproject.toml  requirements.txt  selftest.py  selftest2.py  setup.py  setupinfo.py  test.py  tox.ini  update-error-constants.py  valgrind-python.supp  (+5 more)
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: benchmarks.yml  cache_libs.yml  ci.yml  compiled_python.yml  nanvix-ci.yml  python3.11_-m_pip_install_lxml.yml  scorecard.yml  wheels.yml
.nanvix/: Makefile.nanvix  nanvix.toml  z.py
.nanvix/test/: test_lxml.c
benchmark/: bench_compare.py  bench_elementpath.py  bench_etree.py  bench_find_scaling.py  bench_find_vs_iter.py  bench_objectify.py  bench_xpath.py  bench_xslt.py  benchbase.py  report.py  run_benchmarks.py  verify_descendant.py
doc/: FAQ.txt  api.txt  build.txt  capi.txt  compatibility.txt  cssselect.txt  docstructure.py  element_classes.txt  elementsoup.txt  extensions.txt  html5parser.txt  intro.txt  lxml-source-howto.txt  lxml.mgp  lxml2.txt  lxmlhtml.txt  main.txt  memorymanagement.txt  mkhtml.py  mklatex.py  namespace_extensions.txt  objectify.txt  parsing.txt  performance.txt  pubkey.asc  publish.py  pyrex.txt  resolvers.txt  rest2html.py  rest2latex.py  sax.txt  tutorial.txt  update_performance_results.py  valgrind.txt  validation.txt  xpath.txt  xpathxslt.txt
doc/api/: Makefile  conf.py  index.rst  lxml.html.rst  lxml.isoschematron.rst  lxml.rst  lxml.tests.rst
doc/html/: style.css
doc/licenses/: BSD.txt  elementtree.txt
doc/s5/: Makefile  lxml-ep2008.txt  rst2s5.py
doc/s5/ep2008/: atom.py  atom.rng  atomgen.py
doc/s5/ui/default/: pretty.css
nanvix-port/cpython-headers/: pyconfig.h
samples/: simple-ns.xml  simple.xml
src/: doctest.py  local_doctest.py
src/lxml/: .cvsignore  ElementInclude.py  __init__.py  _elementpath.c  _elementpath.pxi  _elementpath.py  apihelpers.pxi  builder.pxd  builder.py  c14n.pxd  c14n.pyx  classlookup.pxi  cleanup.pxi  config.pxd  cssselect.py  cstd.pxd  cvarargs.pxd  debug.pxi  demo.pyx  docloader.pxi  doctestcompare.py  dom.pyx  dtd.pxi  dtdvalid.pxd  elementpath.pxi  elementtree.pyx  etree.c  etree.h  etree.pyx  etree_defs.h  etreepublic.pxd  extensions.pxi  htmlbuilder.py  htmlparser.pxd  imports.pxi  interfaces.py  iterfind.pxi  iterparse.pxi  lxml.etree.pyx  lxml.gumboparser.pyx  (+44 more)
src/lxml/html/: ElementSoup.py  __init__.py  _dictmixin.py  _diffcommand.py  _difflib.pxd  _difflib.py  _html5builder.py  _setmixin.py  builder.py  clean.py  defs.py  diff.py  formfill.py  html5parser.py  setmixin.py  soupparser.py  usedoctest.py
src/lxml/html/tests/: test_autolink.py  test_autolink.txt  test_basic.py  test_basic.txt  test_clean.py  test_clean.txt  test_clean_embed.txt  test_css.py  test_css.txt  test_css_select.txt  test_diff.py  test_diff.txt  test_elementsoup.py  test_feedparser_data.py  test_formfill.py  test_formfill.txt  test_forms.py  test_forms.txt  test_frames.py  test_html5parser.py  test_rewritelinks.py  test_rewritelinks.txt  test_select.py  test_xhtml.py  test_xhtml.txt  transform_feedparser_data.py
src/lxml/include/: c14n.pxd  dtdvalid.pxd  etree_defs.h  etreepublic.pxd  htmlparser.pxd  relaxng.pxd  tree.pxd  xinclude.pxd  xmlerror.pxd  xmlschema.pxd
src/lxml/includes/: c14n.pxd  dtdvalid.pxd  etree_defs.h  etreepublic.pxd  gumboparser.pxd  htmlparser.pxd  relaxng.pxd  schematron.pxd  tree.pxd  xinclude.pxd  xmlerror.pxd  xmlparser.pxd  xmlschema.pxd  xpath.pxd  xslt.pxd
src/lxml/isoschematron/: __init__.py
src/lxml/tests/: __init__.py  _testlock.pyx  common_imports.py  disabled_test_elementtree_docttests.py  dummy_http_server.py  fuzz_xml_parse.py  selftest.py  selftest2.py  shakespeare.html  test-document.xslt  test-string.xml  test.dtd  test.rnc  test.sch  test.xml  test1.rng  test1.xml  test2.rng  test2.xslt  test_annotations.py  test_api.py  test_broken.xml  test_builder.py  test_c14n.py  test_c14n2_unicode_py3.py  test_classlookup.py  test_css.py  test_css.txt  test_css_select.txt  test_doctestcompare.py  test_dom.py  test_dtd.py  test_elementpath.py  test_elementtree.py  test_elementtree_doctests.py  test_errors.py  test_etree.py  test_external_document.py  test_htmlparser.py  test_http_io.py  (+21 more)
src/lxml/tests/include/: test_xinclude.xml
src/tests/: __init__.py  common_imports.py  test.dtd  test.xsd  test1.xslt  test_doctestcompare.py  test_elementtree.py  test_etree.py  test_htmlparser.py  test_incremental_xmlfile.py  test_isoschematron.py  test_sax.py  test_unicode.py
src/tests/html/: test_elementsoup.py  test_forms.txt  test_frames.py  test_xhtml.py
src/tests/html/feedparser-data/: entry_content_blink.data  entry_content_embed.data  entry_content_meta.data  entry_content_onchange.data  entry_content_onkeypress.data  entry_content_onkeyup.data  entry_content_onunload.data
src/tests/html/hackers-org-data/: style-import.data  style-url-js.data  xml-data-island.data
src/zope/testing/: __init__.py  cleanup.py  doctest.py  doctestunit.py  loggingsupport.py  loghandler.py  tests.py
tools/: ci-run.sh  pypistats.py  xpathgrep.py
tools/manylinux/: build-wheels.sh
travis/: travisInstall.sh  travisRun.sh
vlibxml2/: LICENSE.TXT  MANIFEST.in  Makefile  README.TXT  generator.py  setup.py
vlibxml2/data/: chromewaves.xml  libxml2-api.xml  php.xml
vlibxml2/src/extensions/: forwarddecls.pxi  parser.pxi  stddef.pxi  stubs.pxi  tempclasses.pxi  tree.pxi  vlibxml2_mod.c  vlibxml2_mod.pyx  wrapfuncs.pxi  xmlmemory.pxi  xpath.pxi
vlibxml2/src/vlibxml2/: __init__.py  nodecache.py  victree.py  vlibxml2_subclasses.py
vlibxml2/test/: bench.php  bench.py  data.xml  test.py
(+39 files in other folders)
